configs/assemble_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: assembling-multi-pod
    labels:
        io.kompose.service: assembling-svc
        app   : assembling
        end   : prod
        owner : DaniilMuntian
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: assembling-svc
    template:
        metadata:
            labels:
                io.kompose.network/back: "true"
                io.kompose.service: assembling-svc
        spec:
            containers:
                - name  : assembling-app
                  image : muntian/assembling:latest
                  ports :
                    - containerPort: 8080
                  imagePullPolicy: "Always"
                  
                - name  : assembling-db
                  image : postgres:latest
                  ports :
                    - containerPort: 5432
            restartPolicy: Always
