configs/calibrate_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: calibrating-multi-pod
    labels:
        io.kompose.service: calibrating-svc
        app   : calibrating
        end   : prod
        owner : DaniilMuntian
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: calibrating-svc
    template:
        metadata:
            labels:
                io.kompose.network/back: "true"
                io.kompose.service: calibrating-svc
        spec:
            containers:
                - name  : calibrating-app
                  image : muntian/calibrating:latest
                  ports :
                    - containerPort: 8080
                  imagePullPolicy: "Always"
                  
                - name  : calibrating-db
                  image : postgres:latest
                  ports :
                    - containerPort: 5432
            restartPolicy: Always
