configs/assemble_service.yaml
apiVersion: v1
kind: Service 
metadata:
    name: assemble-service
    labels:
      env                : prod
      owner              : Muntian
      io.kompose.service: assembling-svc
spec:
    selector:
        io.kompose.service: assembling-svc
    ports:
        - name       : "8081"
          protocol: TCP
          port       : 8081
          targetPort : 8080
        - name       : "5432"
          protocol: TCP
          port       : 5432
          targetPort : 5432
    type: ClusterIP
