configs/final_service.yaml
apiVersion: v1
kind: Service 
metadata:
    name: final-service
    labels:
      env                : prod
      owner              : Muntian
      io.kompose.service : final-svc
spec:
    selector:
        io.kompose.service: final-svc
    ports:
        - name       : "8083"
          protocol: TCP
          port       : 8083
          targetPort : 8080
        - name       : "5432"
          protocol: TCP
          port       : 5432
          targetPort : 5432
    type: ClusterIP
