configs/mediator_service.yaml
apiVersion: v1
kind: Service 
metadata:
    name: mediator-service
    labels:
      env                : prod
      owner              : Muntian
      io.kompose.service : med-svc
spec:
    selector:
        io.kompose.service: med-svc
    ports:
        - name       : "8080"
          #protocol: TCP
          port       : 8080
          targetPort : 8080
        - name       : "5432"
          #protocol: TCP
          port       : 5432
          targetPort : 5432
    type: LoadBalancer
